--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "node src/server.js"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "express": "^4.18.2",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
